--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -1,7 +1,7 @@
-$color-main: rgba(255, 255, 255, 1);
-$color-secondary: rgba(0, 0, 0, 1);
-$color-pimary: rgba(0, 0, 0, 0.7);
-$color-darkgrey: #191919;
+@import "vars";
+@import "fonts";
+@import "components";
+@import "vendor";
 
 * {
   padding: 0;
@@ -9,40 +9,65 @@ $color-darkgrey: #191919;
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
   background-color: $color-main;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
 .container {
+  font-family: 'Montserrat';
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: auto;
+}
+
+.particlesjs {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 img {
   width: 100%;
   max-width: 100px;
   margin-bottom: 50px;
+  z-index: 1;
 }
 
 h1 {
+  font-weight: 700;
   font-size: 3em;
   color: $color-secondary;
   text-transform: uppercase;
+  z-index: 1;
 }
 
 p {
+  font-weight: 300;
   color: $color-pimary;
   text-transform: uppercase;
+  z-index: 1;
 }
 
 ul {
   display: flex;
-  flex-wrap: wrap;
-  margin-top: 30px;
+  justify-content: center;
+  margin: 30px 0 auto 0;
+  z-index: 1;
 }
 
 li {
@@ -64,6 +89,13 @@ a {
 }
 
 a:hover {
-  border: 1px solid $color-pimary;
+  border: 1px solid $color-secondary;
   box-shadow: 3px 3px 0 $color-darkgrey;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 20px;
 }
